Added videos (movie and tv) collection)
